--- a/src/styles.css
+++ b/src/styles.css
@@ -1,50 +1,50 @@
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/light.otf");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/regular.otf");
   font-weight: 700;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/semibold.otf");
   font-weight: 800;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/bold.otf");
   font-weight: 900;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/light-italic.otf");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/regular-italic.otf");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/semibold-italic.otf");
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'nova';
+  font-family: "nova";
   src: url("./font/nova/bold-italic.otf");
   font-weight: 900;
   font-style: italic;
@@ -53,7 +53,7 @@
 html {
   font-size: 16px;
   font-family: nova;
-  font-weight: 700;
+  font-weight: 400;
   background-color: #f8f8f8;
 }
 
@@ -81,19 +81,10 @@ html {
   padding: 12px;
   background: #f8f8f8;
   display: inline-grid;
-  grid-template-rows: 12% 88%;
-  grid-template-columns: 18% 72%;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: 1fr 4fr;
   width: 100%;
   height: 98vh;
-}
-
-.sidenav {
-  width: 24%;
-  min-width: 240px;
-}
-
-.content {
-  width: 76%;
 }
 
 .item {
