--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,9 +117,8 @@ html {
   border-bottom: solid 1px $white;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-column-gap: 40%;
-  border-bottom: solid 1px #ddd;
 
+  border-bottom: solid 1px #ddd;
 }
 
 .header-name {
@@ -148,12 +147,43 @@ html {
   grid-row-end: 3;
   border-right: solid 1px #ddd;
   padding: 12px;
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+
+  .sidenav-text {
+    font-weight: 700;
+    font-size: 1.05rem;
+    padding: 12px;
+  }
+
+  .sidenav-links {
+    padding: 12px;
+    display: flex;
+    flex-wrap: wrap;
+
+    a {
+      word-break: break-word;
+      margin: 8px;
+    }
+  }
+
+  .sidenav-footer {
+    padding: 12px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: self-end;
+
+    .sidenav-footer-item {
+      // width: 20%;
+      width: 24px;
+      height: 24px;
+
+    }
+  }
 }
 
-.sidenav-text {
-  font-weight: 700;
-  font-size: 1.05rem;
-}
+
 
 .content {
   grid-column-start: 2;
